syntax = "proto3";

package agentsh.v1;

import "google/protobuf/struct.proto";

// NOTE: This service intentionally uses google.protobuf.Struct to avoid requiring
// code generation in the agentsh server while still providing standard gRPC.
//
// Requests and responses use the same JSON shapes as the HTTP API:
// - CreateSession: {"id": "...", "workspace": "...", "policy": "..."}
// - Exec: {"session_id":"...", "command":"...", "args":[...], "working_dir":"...", "timeout":"...", "stdin":"...", "env":{...}, "include_events":"summary|all|blocked|none"}
service Agentsh {
  // Session management
  rpc CreateSession(google.protobuf.Struct) returns (google.protobuf.Struct);
  rpc ListSessions(google.protobuf.Struct) returns (google.protobuf.Struct);
  rpc GetSession(google.protobuf.Struct) returns (google.protobuf.Struct);
  rpc DestroySession(google.protobuf.Struct) returns (google.protobuf.Struct);
  rpc PatchSession(google.protobuf.Struct) returns (google.protobuf.Struct);

  // Command execution
  rpc Exec(google.protobuf.Struct) returns (google.protobuf.Struct);
  rpc ExecStream(google.protobuf.Struct) returns (stream google.protobuf.Struct);
  rpc KillCommand(google.protobuf.Struct) returns (google.protobuf.Struct);

  // Events
  rpc EventsTail(google.protobuf.Struct) returns (stream google.protobuf.Struct);
  rpc QueryEvents(google.protobuf.Struct) returns (google.protobuf.Struct);
  rpc SearchEvents(google.protobuf.Struct) returns (google.protobuf.Struct);

  // Output retrieval
  rpc OutputChunk(google.protobuf.Struct) returns (google.protobuf.Struct);

  // Approvals
  rpc ListApprovals(google.protobuf.Struct) returns (google.protobuf.Struct);
  rpc ResolveApproval(google.protobuf.Struct) returns (google.protobuf.Struct);

  // Policy
  rpc PolicyTest(google.protobuf.Struct) returns (google.protobuf.Struct);
}
